--- a/level-1002.html
+++ b/level-1002.html
@@ -8,13 +8,19 @@
     <title>Clue Game</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
-    <!-- <script src="./js/script.js"></script> -->
+    <script src="./js/riddles.js"></script>
+    <script src="./js/script.js"></script>
 </head>
 
 <body>
     <div class="wrapper">
-        <h1 class="game-title">Clue Game</h1>
-        <a class="game-button" href="level-1001.html">Move on</a>
+        <div class="game-area">
+            <h2 class="game-title">Level 2</h2>
+            <div class="game-canvas">
+                Jubii
+                <button id="game-advance" class="game-advance">Move on</button>
+            </div>
+        </div>
     </div>
 </body>
 
