--- a/level-1001.html
+++ b/level-1001.html
@@ -8,7 +8,7 @@
     <title>Clue Game</title>
     <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/riddles.js"></script>
+    <script src="./js/puzzles.js"></script>
     <script src="./js/script.js"></script>
 </head>
 
@@ -17,7 +17,7 @@
         <div class="game-area">
             <h2 class="game-title">Level 1</h2>
             <div class="game-canvas">
-                <p id="game-riddle" class="game-riddle">
+                <p id="game-task" class="game-text">
                     Travel to the sun, to find water
                 </p>
                 <div id="game-choices" class="game-choices">
