Level files move to "level" -folder

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="wrapper">
         <h1 class="game-title">Clue Game</h1>
-        <a class="game-button" href="level-1001.html">Start game</a>
+        <a class="game-button" href="./level/1.html">Start game</a>
     </div>
 </body>
 
