--- a/level/2.html
+++ b/level/2.html
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A fun small game where we experiment with different kinds of functionality and fun ideas.">
     <title>Clue Game</title>
-    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/puzzles.js"></script>
-    <script src="./js/script.js"></script>
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/puzzles.js"></script>
+    <script src="../js/script.js"></script>
 </head>
 
 <body>
     <div class="wrapper">
         <div class="game-area">
-            <h2 class="game-title">Level 1</h2>
+            <h2 class="game-title">Level 2</h2>
             <div class="game-canvas">
                 <p id="game-task" class="game-text">
                     Travel to the sun, to find water
